--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GripLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
 +ActionMappings=(ActionName="GripRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
 +ActionMappings=(ActionName="StrokeAButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_A_Click)
++ActionMappings=(ActionName="Save",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_B_Click)
++ActionMappings=(ActionName="Load",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Y_Click)
 +AxisMappings=(AxisName="Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Forward",Scale=-1.000000,Key=S)
